CSS JIT: the adjacent position is never reset https://bugs.webkit.org/show_bug.cgi?id=131145

Reviewed by Andreas Kling.

Source/WebCore:

Corresponding radar: <rdar://problem/16440036>. The backtracking action would use a tail
when not needed.

Test: fast/selectors/multiple-adjacent-chain-without-adjacent-tail.html

* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::updateChainStates):

LayoutTests:

* fast/selectors/multiple-adjacent-chain-without-adjacent-tail-expected.txt: Added.
* fast/selectors/multiple-adjacent-chain-without-adjacent-tail.html: Added.


Canonical link: https://commits.webkit.org/149198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166695 268f45cc-cd09-0410-ab3c-d52691b4dbfc